// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityHistoryLevels should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ActivityHistoryLevels
    copy={
      Object {
        "headerLeft": "",
        "headerLevel": "",
        "headerMid": "",
        "headerRight": "",
        "heading": "",
      }
    }
    isAllDataLoaded={true}
    items={
      Array [
        Object {
          "items": Array [
            Object {
              "challenges": Array [
                Object {
                  "earned": 1,
                  "milestones": 1,
                  "name": "long walk",
                  "score": "8000 steps",
                },
                Object {
                  "earned": 3,
                  "milestones": 2,
                  "name": "meditation",
                  "score": "08m 00s",
                },
                Object {
                  "earned": 1,
                  "milestones": 3,
                  "name": "short stroll",
                  "score": "1299 steps",
                },
              ],
              "dayOfMonth": "13",
              "dayOfWeek": "SAT",
              "id": "1",
              "level": 4,
              "sources": Object {},
              "steps": 4098,
              "yucoin": 3,
            },
          ],
          "title": "January 2019",
        },
      ]
    }
    loading={false}
    onPressClose={[MockFunction]}
    onRefresh={[MockFunction]}
    onSetLargelistRef={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <GenericHeading
          heading=""
        />,
        <View
          style={
            Object {
              "flexDirection": "row",
              "height": 130,
              "paddingHorizontal": 30,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "height": "100%",
                "justifyContent": "center",
                "width": 90,
              }
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "color": "rgb(251,207,39)",
                }
              }
            >
              
            </YuText>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "height": "100%",
                "justifyContent": "center",
                "width": 112,
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "rgb(225,5,119)",
                }
              }
            >
              
            </YuText>
          </View>
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flex": 1,
                "height": "100%",
                "justifyContent": "center",
                "paddingLeft": 24,
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "rgb(225,5,119)",
                }
              }
            >
              
            </YuText>
          </View>
          <View
            style={
              Object {
                "alignItems": "flex-end",
                "height": "100%",
                "justifyContent": "center",
                "width": 92,
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "rgb(225,5,119)",
                }
              }
            >
              
            </YuText>
          </View>
        </View>,
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <LargeList
            allLoaded={false}
            data={
              Array [
                Object {
                  "items": Array [
                    Object {
                      "challenges": Array [
                        Object {
                          "earned": 1,
                          "milestones": 1,
                          "name": "long walk",
                          "score": "8000 steps",
                        },
                        Object {
                          "earned": 3,
                          "milestones": 2,
                          "name": "meditation",
                          "score": "08m 00s",
                        },
                        Object {
                          "earned": 1,
                          "milestones": 3,
                          "name": "short stroll",
                          "score": "1299 steps",
                        },
                      ],
                      "dayOfMonth": "13",
                      "dayOfWeek": "SAT",
                      "id": "1",
                      "level": 4,
                      "sources": Object {},
                      "steps": 4098,
                      "yucoin": 3,
                    },
                  ],
                  "title": "January 2019",
                },
              ]
            }
            groupCount={4}
            groupMinHeight={444.6666666666667}
            heightForIndexPath={[Function]}
            heightForSection={[Function]}
            loadingFooter={[Function]}
            onLoading={[Function]}
            onRefresh={[MockFunction]}
            refreshHeader={[Function]}
            renderEmpty={[Function]}
            renderIndexPath={[Function]}
            renderSection={[Function]}
            updateTimeInterval={150}
          />
        </View>,
        <Close
          onPress={[MockFunction]}
        />,
      ],
      "style": Object {
        "flex": 1,
      },
      "testID": "ACTIVITY_HISTORY_SCREEN",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "heading": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 90,
                }
              }
            >
              <YuText
                bold={true}
                style={
                  Object {
                    "color": "rgb(251,207,39)",
                  }
                }
              >
                
              </YuText>
            </View>,
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 112,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "rgb(225,5,119)",
                  }
                }
              >
                
              </YuText>
            </View>,
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flex": 1,
                  "height": "100%",
                  "justifyContent": "center",
                  "paddingLeft": 24,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "rgb(225,5,119)",
                  }
                }
              >
                
              </YuText>
            </View>,
            <View
              style={
                Object {
                  "alignItems": "flex-end",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 92,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "rgb(225,5,119)",
                  }
                }
              >
                
              </YuText>
            </View>,
          ],
          "style": Object {
            "flexDirection": "row",
            "height": 130,
            "paddingHorizontal": 30,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <YuText
                bold={true}
                style={
                  Object {
                    "color": "rgb(251,207,39)",
                  }
                }
              >
                
              </YuText>,
              "style": Object {
                "alignItems": "center",
                "height": "100%",
                "justifyContent": "center",
                "width": 90,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "",
                "style": Object {
                  "color": "rgb(251,207,39)",
                },
              },
              "ref": null,
              "rendered": "",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <YuText
                style={
                  Object {
                    "color": "rgb(225,5,119)",
                  }
                }
              >
                
              </YuText>,
              "style": Object {
                "alignItems": "center",
                "height": "100%",
                "justifyContent": "center",
                "width": 112,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "",
                "style": Object {
                  "color": "rgb(225,5,119)",
                },
              },
              "ref": null,
              "rendered": "",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <YuText
                style={
                  Object {
                    "color": "rgb(225,5,119)",
                  }
                }
              >
                
              </YuText>,
              "style": Object {
                "alignItems": "flex-start",
                "flex": 1,
                "height": "100%",
                "justifyContent": "center",
                "paddingLeft": 24,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "",
                "style": Object {
                  "color": "rgb(225,5,119)",
                },
              },
              "ref": null,
              "rendered": "",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <YuText
                style={
                  Object {
                    "color": "rgb(225,5,119)",
                  }
                }
              >
                
              </YuText>,
              "style": Object {
                "alignItems": "flex-end",
                "height": "100%",
                "justifyContent": "center",
                "width": 92,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "",
                "style": Object {
                  "color": "rgb(225,5,119)",
                },
              },
              "ref": null,
              "rendered": "",
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <LargeList
            allLoaded={false}
            data={
              Array [
                Object {
                  "items": Array [
                    Object {
                      "challenges": Array [
                        Object {
                          "earned": 1,
                          "milestones": 1,
                          "name": "long walk",
                          "score": "8000 steps",
                        },
                        Object {
                          "earned": 3,
                          "milestones": 2,
                          "name": "meditation",
                          "score": "08m 00s",
                        },
                        Object {
                          "earned": 1,
                          "milestones": 3,
                          "name": "short stroll",
                          "score": "1299 steps",
                        },
                      ],
                      "dayOfMonth": "13",
                      "dayOfWeek": "SAT",
                      "id": "1",
                      "level": 4,
                      "sources": Object {},
                      "steps": 4098,
                      "yucoin": 3,
                    },
                  ],
                  "title": "January 2019",
                },
              ]
            }
            groupCount={4}
            groupMinHeight={444.6666666666667}
            heightForIndexPath={[Function]}
            heightForSection={[Function]}
            loadingFooter={[Function]}
            onLoading={[Function]}
            onRefresh={[MockFunction]}
            refreshHeader={[Function]}
            renderEmpty={[Function]}
            renderIndexPath={[Function]}
            renderSection={[Function]}
            updateTimeInterval={150}
          />,
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "allLoaded": false,
            "data": Array [
              Object {
                "items": Array [
                  Object {
                    "challenges": Array [
                      Object {
                        "earned": 1,
                        "milestones": 1,
                        "name": "long walk",
                        "score": "8000 steps",
                      },
                      Object {
                        "earned": 3,
                        "milestones": 2,
                        "name": "meditation",
                        "score": "08m 00s",
                      },
                      Object {
                        "earned": 1,
                        "milestones": 3,
                        "name": "short stroll",
                        "score": "1299 steps",
                      },
                    ],
                    "dayOfMonth": "13",
                    "dayOfWeek": "SAT",
                    "id": "1",
                    "level": 4,
                    "sources": Object {},
                    "steps": 4098,
                    "yucoin": 3,
                  },
                ],
                "title": "January 2019",
              },
            ],
            "groupCount": 4,
            "groupMinHeight": 444.6666666666667,
            "heightForIndexPath": [Function],
            "heightForSection": [Function],
            "loadingFooter": [Function],
            "onLoading": [Function],
            "onRefresh": [MockFunction],
            "refreshHeader": [Function],
            "renderEmpty": [Function],
            "renderIndexPath": [Function],
            "renderSection": [Function],
            "updateTimeInterval": 150,
          },
          "ref": [MockFunction],
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <GenericHeading
            heading=""
          />,
          <View
            style={
              Object {
                "flexDirection": "row",
                "height": 130,
                "paddingHorizontal": 30,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 90,
                }
              }
            >
              <YuText
                bold={true}
                style={
                  Object {
                    "color": "rgb(251,207,39)",
                  }
                }
              >
                
              </YuText>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 112,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "rgb(225,5,119)",
                  }
                }
              >
                
              </YuText>
            </View>
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flex": 1,
                  "height": "100%",
                  "justifyContent": "center",
                  "paddingLeft": 24,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "rgb(225,5,119)",
                  }
                }
              >
                
              </YuText>
            </View>
            <View
              style={
                Object {
                  "alignItems": "flex-end",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 92,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "rgb(225,5,119)",
                  }
                }
              >
                
              </YuText>
            </View>
          </View>,
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <LargeList
              allLoaded={false}
              data={
                Array [
                  Object {
                    "items": Array [
                      Object {
                        "challenges": Array [
                          Object {
                            "earned": 1,
                            "milestones": 1,
                            "name": "long walk",
                            "score": "8000 steps",
                          },
                          Object {
                            "earned": 3,
                            "milestones": 2,
                            "name": "meditation",
                            "score": "08m 00s",
                          },
                          Object {
                            "earned": 1,
                            "milestones": 3,
                            "name": "short stroll",
                            "score": "1299 steps",
                          },
                        ],
                        "dayOfMonth": "13",
                        "dayOfWeek": "SAT",
                        "id": "1",
                        "level": 4,
                        "sources": Object {},
                        "steps": 4098,
                        "yucoin": 3,
                      },
                    ],
                    "title": "January 2019",
                  },
                ]
              }
              groupCount={4}
              groupMinHeight={444.6666666666667}
              heightForIndexPath={[Function]}
              heightForSection={[Function]}
              loadingFooter={[Function]}
              onLoading={[Function]}
              onRefresh={[MockFunction]}
              refreshHeader={[Function]}
              renderEmpty={[Function]}
              renderIndexPath={[Function]}
              renderSection={[Function]}
              updateTimeInterval={150}
            />
          </View>,
          <Close
            onPress={[MockFunction]}
          />,
        ],
        "style": Object {
          "flex": 1,
        },
        "testID": "ACTIVITY_HISTORY_SCREEN",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "heading": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "height": "100%",
                    "justifyContent": "center",
                    "width": 90,
                  }
                }
              >
                <YuText
                  bold={true}
                  style={
                    Object {
                      "color": "rgb(251,207,39)",
                    }
                  }
                >
                  
                </YuText>
              </View>,
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "height": "100%",
                    "justifyContent": "center",
                    "width": 112,
                  }
                }
              >
                <YuText
                  style={
                    Object {
                      "color": "rgb(225,5,119)",
                    }
                  }
                >
                  
                </YuText>
              </View>,
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flex": 1,
                    "height": "100%",
                    "justifyContent": "center",
                    "paddingLeft": 24,
                  }
                }
              >
                <YuText
                  style={
                    Object {
                      "color": "rgb(225,5,119)",
                    }
                  }
                >
                  
                </YuText>
              </View>,
              <View
                style={
                  Object {
                    "alignItems": "flex-end",
                    "height": "100%",
                    "justifyContent": "center",
                    "width": 92,
                  }
                }
              >
                <YuText
                  style={
                    Object {
                      "color": "rgb(225,5,119)",
                    }
                  }
                >
                  
                </YuText>
              </View>,
            ],
            "style": Object {
              "flexDirection": "row",
              "height": 130,
              "paddingHorizontal": 30,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <YuText
                  bold={true}
                  style={
                    Object {
                      "color": "rgb(251,207,39)",
                    }
                  }
                >
                  
                </YuText>,
                "style": Object {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 90,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "bold": true,
                  "children": "",
                  "style": Object {
                    "color": "rgb(251,207,39)",
                  },
                },
                "ref": null,
                "rendered": "",
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <YuText
                  style={
                    Object {
                      "color": "rgb(225,5,119)",
                    }
                  }
                >
                  
                </YuText>,
                "style": Object {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 112,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "",
                  "style": Object {
                    "color": "rgb(225,5,119)",
                  },
                },
                "ref": null,
                "rendered": "",
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <YuText
                  style={
                    Object {
                      "color": "rgb(225,5,119)",
                    }
                  }
                >
                  
                </YuText>,
                "style": Object {
                  "alignItems": "flex-start",
                  "flex": 1,
                  "height": "100%",
                  "justifyContent": "center",
                  "paddingLeft": 24,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "",
                  "style": Object {
                    "color": "rgb(225,5,119)",
                  },
                },
                "ref": null,
                "rendered": "",
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <YuText
                  style={
                    Object {
                      "color": "rgb(225,5,119)",
                    }
                  }
                >
                  
                </YuText>,
                "style": Object {
                  "alignItems": "flex-end",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 92,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "",
                  "style": Object {
                    "color": "rgb(225,5,119)",
                  },
                },
                "ref": null,
                "rendered": "",
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <LargeList
              allLoaded={false}
              data={
                Array [
                  Object {
                    "items": Array [
                      Object {
                        "challenges": Array [
                          Object {
                            "earned": 1,
                            "milestones": 1,
                            "name": "long walk",
                            "score": "8000 steps",
                          },
                          Object {
                            "earned": 3,
                            "milestones": 2,
                            "name": "meditation",
                            "score": "08m 00s",
                          },
                          Object {
                            "earned": 1,
                            "milestones": 3,
                            "name": "short stroll",
                            "score": "1299 steps",
                          },
                        ],
                        "dayOfMonth": "13",
                        "dayOfWeek": "SAT",
                        "id": "1",
                        "level": 4,
                        "sources": Object {},
                        "steps": 4098,
                        "yucoin": 3,
                      },
                    ],
                    "title": "January 2019",
                  },
                ]
              }
              groupCount={4}
              groupMinHeight={444.6666666666667}
              heightForIndexPath={[Function]}
              heightForSection={[Function]}
              loadingFooter={[Function]}
              onLoading={[Function]}
              onRefresh={[MockFunction]}
              refreshHeader={[Function]}
              renderEmpty={[Function]}
              renderIndexPath={[Function]}
              renderSection={[Function]}
              updateTimeInterval={150}
            />,
            "style": Object {
              "flex": 1,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "allLoaded": false,
              "data": Array [
                Object {
                  "items": Array [
                    Object {
                      "challenges": Array [
                        Object {
                          "earned": 1,
                          "milestones": 1,
                          "name": "long walk",
                          "score": "8000 steps",
                        },
                        Object {
                          "earned": 3,
                          "milestones": 2,
                          "name": "meditation",
                          "score": "08m 00s",
                        },
                        Object {
                          "earned": 1,
                          "milestones": 3,
                          "name": "short stroll",
                          "score": "1299 steps",
                        },
                      ],
                      "dayOfMonth": "13",
                      "dayOfWeek": "SAT",
                      "id": "1",
                      "level": 4,
                      "sources": Object {},
                      "steps": 4098,
                      "yucoin": 3,
                    },
                  ],
                  "title": "January 2019",
                },
              ],
              "groupCount": 4,
              "groupMinHeight": 444.6666666666667,
              "heightForIndexPath": [Function],
              "heightForSection": [Function],
              "loadingFooter": [Function],
              "onLoading": [Function],
              "onRefresh": [MockFunction],
              "refreshHeader": [Function],
              "renderEmpty": [Function],
              "renderIndexPath": [Function],
              "renderSection": [Function],
              "updateTimeInterval": 150,
            },
            "ref": [MockFunction],
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`ActivityHistoryLevels should render with the flatlist loading 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ActivityHistoryLevels
    copy={
      Object {
        "headerLeft": "",
        "headerLevel": "",
        "headerMid": "",
        "headerRight": "",
        "heading": "",
      }
    }
    isAllDataLoaded={true}
    items={
      Array [
        Object {
          "items": Array [
            Object {
              "challenges": Array [
                Object {
                  "earned": 1,
                  "milestones": 1,
                  "name": "long walk",
                  "score": "8000 steps",
                },
                Object {
                  "earned": 3,
                  "milestones": 2,
                  "name": "meditation",
                  "score": "08m 00s",
                },
                Object {
                  "earned": 1,
                  "milestones": 3,
                  "name": "short stroll",
                  "score": "1299 steps",
                },
              ],
              "dayOfMonth": "13",
              "dayOfWeek": "SAT",
              "id": "1",
              "level": 4,
              "sources": Object {},
              "steps": 4098,
              "yucoin": 3,
            },
          ],
          "title": "January 2019",
        },
      ]
    }
    loading={true}
    onPressClose={[MockFunction]}
    onRefresh={[MockFunction]}
    onSetLargelistRef={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <GenericHeading
          heading=""
        />,
        <View
          style={
            Object {
              "flexDirection": "row",
              "height": 130,
              "paddingHorizontal": 30,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "height": "100%",
                "justifyContent": "center",
                "width": 90,
              }
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "color": "rgb(251,207,39)",
                }
              }
            >
              
            </YuText>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "height": "100%",
                "justifyContent": "center",
                "width": 112,
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "rgb(225,5,119)",
                }
              }
            >
              
            </YuText>
          </View>
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flex": 1,
                "height": "100%",
                "justifyContent": "center",
                "paddingLeft": 24,
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "rgb(225,5,119)",
                }
              }
            >
              
            </YuText>
          </View>
          <View
            style={
              Object {
                "alignItems": "flex-end",
                "height": "100%",
                "justifyContent": "center",
                "width": 92,
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "rgb(225,5,119)",
                }
              }
            >
              
            </YuText>
          </View>
        </View>,
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <LargeList
            allLoaded={false}
            data={
              Array [
                Object {
                  "items": Array [
                    Object {
                      "challenges": Array [
                        Object {
                          "earned": 1,
                          "milestones": 1,
                          "name": "long walk",
                          "score": "8000 steps",
                        },
                        Object {
                          "earned": 3,
                          "milestones": 2,
                          "name": "meditation",
                          "score": "08m 00s",
                        },
                        Object {
                          "earned": 1,
                          "milestones": 3,
                          "name": "short stroll",
                          "score": "1299 steps",
                        },
                      ],
                      "dayOfMonth": "13",
                      "dayOfWeek": "SAT",
                      "id": "1",
                      "level": 4,
                      "sources": Object {},
                      "steps": 4098,
                      "yucoin": 3,
                    },
                  ],
                  "title": "January 2019",
                },
              ]
            }
            groupCount={4}
            groupMinHeight={444.6666666666667}
            heightForIndexPath={[Function]}
            heightForSection={[Function]}
            loadingFooter={[Function]}
            onLoading={[Function]}
            onRefresh={[MockFunction]}
            refreshHeader={[Function]}
            renderEmpty={[Function]}
            renderIndexPath={[Function]}
            renderSection={[Function]}
            updateTimeInterval={150}
          />
        </View>,
        <Close
          onPress={[MockFunction]}
        />,
      ],
      "style": Object {
        "flex": 1,
      },
      "testID": "ACTIVITY_HISTORY_SCREEN",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "heading": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 90,
                }
              }
            >
              <YuText
                bold={true}
                style={
                  Object {
                    "color": "rgb(251,207,39)",
                  }
                }
              >
                
              </YuText>
            </View>,
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 112,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "rgb(225,5,119)",
                  }
                }
              >
                
              </YuText>
            </View>,
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flex": 1,
                  "height": "100%",
                  "justifyContent": "center",
                  "paddingLeft": 24,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "rgb(225,5,119)",
                  }
                }
              >
                
              </YuText>
            </View>,
            <View
              style={
                Object {
                  "alignItems": "flex-end",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 92,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "rgb(225,5,119)",
                  }
                }
              >
                
              </YuText>
            </View>,
          ],
          "style": Object {
            "flexDirection": "row",
            "height": 130,
            "paddingHorizontal": 30,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <YuText
                bold={true}
                style={
                  Object {
                    "color": "rgb(251,207,39)",
                  }
                }
              >
                
              </YuText>,
              "style": Object {
                "alignItems": "center",
                "height": "100%",
                "justifyContent": "center",
                "width": 90,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "",
                "style": Object {
                  "color": "rgb(251,207,39)",
                },
              },
              "ref": null,
              "rendered": "",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <YuText
                style={
                  Object {
                    "color": "rgb(225,5,119)",
                  }
                }
              >
                
              </YuText>,
              "style": Object {
                "alignItems": "center",
                "height": "100%",
                "justifyContent": "center",
                "width": 112,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "",
                "style": Object {
                  "color": "rgb(225,5,119)",
                },
              },
              "ref": null,
              "rendered": "",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <YuText
                style={
                  Object {
                    "color": "rgb(225,5,119)",
                  }
                }
              >
                
              </YuText>,
              "style": Object {
                "alignItems": "flex-start",
                "flex": 1,
                "height": "100%",
                "justifyContent": "center",
                "paddingLeft": 24,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "",
                "style": Object {
                  "color": "rgb(225,5,119)",
                },
              },
              "ref": null,
              "rendered": "",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <YuText
                style={
                  Object {
                    "color": "rgb(225,5,119)",
                  }
                }
              >
                
              </YuText>,
              "style": Object {
                "alignItems": "flex-end",
                "height": "100%",
                "justifyContent": "center",
                "width": 92,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "",
                "style": Object {
                  "color": "rgb(225,5,119)",
                },
              },
              "ref": null,
              "rendered": "",
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <LargeList
            allLoaded={false}
            data={
              Array [
                Object {
                  "items": Array [
                    Object {
                      "challenges": Array [
                        Object {
                          "earned": 1,
                          "milestones": 1,
                          "name": "long walk",
                          "score": "8000 steps",
                        },
                        Object {
                          "earned": 3,
                          "milestones": 2,
                          "name": "meditation",
                          "score": "08m 00s",
                        },
                        Object {
                          "earned": 1,
                          "milestones": 3,
                          "name": "short stroll",
                          "score": "1299 steps",
                        },
                      ],
                      "dayOfMonth": "13",
                      "dayOfWeek": "SAT",
                      "id": "1",
                      "level": 4,
                      "sources": Object {},
                      "steps": 4098,
                      "yucoin": 3,
                    },
                  ],
                  "title": "January 2019",
                },
              ]
            }
            groupCount={4}
            groupMinHeight={444.6666666666667}
            heightForIndexPath={[Function]}
            heightForSection={[Function]}
            loadingFooter={[Function]}
            onLoading={[Function]}
            onRefresh={[MockFunction]}
            refreshHeader={[Function]}
            renderEmpty={[Function]}
            renderIndexPath={[Function]}
            renderSection={[Function]}
            updateTimeInterval={150}
          />,
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "allLoaded": false,
            "data": Array [
              Object {
                "items": Array [
                  Object {
                    "challenges": Array [
                      Object {
                        "earned": 1,
                        "milestones": 1,
                        "name": "long walk",
                        "score": "8000 steps",
                      },
                      Object {
                        "earned": 3,
                        "milestones": 2,
                        "name": "meditation",
                        "score": "08m 00s",
                      },
                      Object {
                        "earned": 1,
                        "milestones": 3,
                        "name": "short stroll",
                        "score": "1299 steps",
                      },
                    ],
                    "dayOfMonth": "13",
                    "dayOfWeek": "SAT",
                    "id": "1",
                    "level": 4,
                    "sources": Object {},
                    "steps": 4098,
                    "yucoin": 3,
                  },
                ],
                "title": "January 2019",
              },
            ],
            "groupCount": 4,
            "groupMinHeight": 444.6666666666667,
            "heightForIndexPath": [Function],
            "heightForSection": [Function],
            "loadingFooter": [Function],
            "onLoading": [Function],
            "onRefresh": [MockFunction],
            "refreshHeader": [Function],
            "renderEmpty": [Function],
            "renderIndexPath": [Function],
            "renderSection": [Function],
            "updateTimeInterval": 150,
          },
          "ref": [MockFunction],
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <GenericHeading
            heading=""
          />,
          <View
            style={
              Object {
                "flexDirection": "row",
                "height": 130,
                "paddingHorizontal": 30,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 90,
                }
              }
            >
              <YuText
                bold={true}
                style={
                  Object {
                    "color": "rgb(251,207,39)",
                  }
                }
              >
                
              </YuText>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 112,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "rgb(225,5,119)",
                  }
                }
              >
                
              </YuText>
            </View>
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flex": 1,
                  "height": "100%",
                  "justifyContent": "center",
                  "paddingLeft": 24,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "rgb(225,5,119)",
                  }
                }
              >
                
              </YuText>
            </View>
            <View
              style={
                Object {
                  "alignItems": "flex-end",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 92,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "rgb(225,5,119)",
                  }
                }
              >
                
              </YuText>
            </View>
          </View>,
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <LargeList
              allLoaded={false}
              data={
                Array [
                  Object {
                    "items": Array [
                      Object {
                        "challenges": Array [
                          Object {
                            "earned": 1,
                            "milestones": 1,
                            "name": "long walk",
                            "score": "8000 steps",
                          },
                          Object {
                            "earned": 3,
                            "milestones": 2,
                            "name": "meditation",
                            "score": "08m 00s",
                          },
                          Object {
                            "earned": 1,
                            "milestones": 3,
                            "name": "short stroll",
                            "score": "1299 steps",
                          },
                        ],
                        "dayOfMonth": "13",
                        "dayOfWeek": "SAT",
                        "id": "1",
                        "level": 4,
                        "sources": Object {},
                        "steps": 4098,
                        "yucoin": 3,
                      },
                    ],
                    "title": "January 2019",
                  },
                ]
              }
              groupCount={4}
              groupMinHeight={444.6666666666667}
              heightForIndexPath={[Function]}
              heightForSection={[Function]}
              loadingFooter={[Function]}
              onLoading={[Function]}
              onRefresh={[MockFunction]}
              refreshHeader={[Function]}
              renderEmpty={[Function]}
              renderIndexPath={[Function]}
              renderSection={[Function]}
              updateTimeInterval={150}
            />
          </View>,
          <Close
            onPress={[MockFunction]}
          />,
        ],
        "style": Object {
          "flex": 1,
        },
        "testID": "ACTIVITY_HISTORY_SCREEN",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "heading": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "height": "100%",
                    "justifyContent": "center",
                    "width": 90,
                  }
                }
              >
                <YuText
                  bold={true}
                  style={
                    Object {
                      "color": "rgb(251,207,39)",
                    }
                  }
                >
                  
                </YuText>
              </View>,
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "height": "100%",
                    "justifyContent": "center",
                    "width": 112,
                  }
                }
              >
                <YuText
                  style={
                    Object {
                      "color": "rgb(225,5,119)",
                    }
                  }
                >
                  
                </YuText>
              </View>,
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flex": 1,
                    "height": "100%",
                    "justifyContent": "center",
                    "paddingLeft": 24,
                  }
                }
              >
                <YuText
                  style={
                    Object {
                      "color": "rgb(225,5,119)",
                    }
                  }
                >
                  
                </YuText>
              </View>,
              <View
                style={
                  Object {
                    "alignItems": "flex-end",
                    "height": "100%",
                    "justifyContent": "center",
                    "width": 92,
                  }
                }
              >
                <YuText
                  style={
                    Object {
                      "color": "rgb(225,5,119)",
                    }
                  }
                >
                  
                </YuText>
              </View>,
            ],
            "style": Object {
              "flexDirection": "row",
              "height": 130,
              "paddingHorizontal": 30,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <YuText
                  bold={true}
                  style={
                    Object {
                      "color": "rgb(251,207,39)",
                    }
                  }
                >
                  
                </YuText>,
                "style": Object {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 90,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "bold": true,
                  "children": "",
                  "style": Object {
                    "color": "rgb(251,207,39)",
                  },
                },
                "ref": null,
                "rendered": "",
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <YuText
                  style={
                    Object {
                      "color": "rgb(225,5,119)",
                    }
                  }
                >
                  
                </YuText>,
                "style": Object {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 112,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "",
                  "style": Object {
                    "color": "rgb(225,5,119)",
                  },
                },
                "ref": null,
                "rendered": "",
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <YuText
                  style={
                    Object {
                      "color": "rgb(225,5,119)",
                    }
                  }
                >
                  
                </YuText>,
                "style": Object {
                  "alignItems": "flex-start",
                  "flex": 1,
                  "height": "100%",
                  "justifyContent": "center",
                  "paddingLeft": 24,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "",
                  "style": Object {
                    "color": "rgb(225,5,119)",
                  },
                },
                "ref": null,
                "rendered": "",
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <YuText
                  style={
                    Object {
                      "color": "rgb(225,5,119)",
                    }
                  }
                >
                  
                </YuText>,
                "style": Object {
                  "alignItems": "flex-end",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 92,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "",
                  "style": Object {
                    "color": "rgb(225,5,119)",
                  },
                },
                "ref": null,
                "rendered": "",
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <LargeList
              allLoaded={false}
              data={
                Array [
                  Object {
                    "items": Array [
                      Object {
                        "challenges": Array [
                          Object {
                            "earned": 1,
                            "milestones": 1,
                            "name": "long walk",
                            "score": "8000 steps",
                          },
                          Object {
                            "earned": 3,
                            "milestones": 2,
                            "name": "meditation",
                            "score": "08m 00s",
                          },
                          Object {
                            "earned": 1,
                            "milestones": 3,
                            "name": "short stroll",
                            "score": "1299 steps",
                          },
                        ],
                        "dayOfMonth": "13",
                        "dayOfWeek": "SAT",
                        "id": "1",
                        "level": 4,
                        "sources": Object {},
                        "steps": 4098,
                        "yucoin": 3,
                      },
                    ],
                    "title": "January 2019",
                  },
                ]
              }
              groupCount={4}
              groupMinHeight={444.6666666666667}
              heightForIndexPath={[Function]}
              heightForSection={[Function]}
              loadingFooter={[Function]}
              onLoading={[Function]}
              onRefresh={[MockFunction]}
              refreshHeader={[Function]}
              renderEmpty={[Function]}
              renderIndexPath={[Function]}
              renderSection={[Function]}
              updateTimeInterval={150}
            />,
            "style": Object {
              "flex": 1,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "allLoaded": false,
              "data": Array [
                Object {
                  "items": Array [
                    Object {
                      "challenges": Array [
                        Object {
                          "earned": 1,
                          "milestones": 1,
                          "name": "long walk",
                          "score": "8000 steps",
                        },
                        Object {
                          "earned": 3,
                          "milestones": 2,
                          "name": "meditation",
                          "score": "08m 00s",
                        },
                        Object {
                          "earned": 1,
                          "milestones": 3,
                          "name": "short stroll",
                          "score": "1299 steps",
                        },
                      ],
                      "dayOfMonth": "13",
                      "dayOfWeek": "SAT",
                      "id": "1",
                      "level": 4,
                      "sources": Object {},
                      "steps": 4098,
                      "yucoin": 3,
                    },
                  ],
                  "title": "January 2019",
                },
              ],
              "groupCount": 4,
              "groupMinHeight": 444.6666666666667,
              "heightForIndexPath": [Function],
              "heightForSection": [Function],
              "loadingFooter": [Function],
              "onLoading": [Function],
              "onRefresh": [MockFunction],
              "refreshHeader": [Function],
              "renderEmpty": [Function],
              "renderIndexPath": [Function],
              "renderSection": [Function],
              "updateTimeInterval": 150,
            },
            "ref": [MockFunction],
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
